[tool.poetry]
name = "llamatrix"
version = "0.1.0"
description = "A LLaMA chatbox for Matrix"
authors = ["spv420 <spv420@github.com>", "Lee Braiden <leebraid@gmail.com>"]
license = ""
readme = "README.md"
packages = [
	{include = "llamatrix", from="src"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
accelerate = "^0.18.0"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
aiohttp-socks = "^0.8.0"
aiosignal = "^1.3.1"
async-timeout = "^4.0.2"
attrs = "^22.2.0"
bitsandbytes = "^0.38.1"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
docopt = "^0.6.2"
filelock = "^3.11.0"
frozenlist = "^1.3.3"
future = "^0.18.3"
googlevoice = {git = "https://github.com/jaraco/googlevoice.git", rev = "17ba8a3b60588abd3af7c16c3e804dfe5c6ddca5"}
h11 = "^0.14.0"
h2 = "^4.1.0"
hpack = "^4.0.0"
huggingface-hub = "^0.13.4"
hyperframe = "^6.0.1"
idna = "^3.4"
imap-tools = "^1.0.0"
jsonschema = "^4.17.3"
logbook = "^1.5.3"
matrix-client = "^0.4.0"
multidict = "^6.0.4"
numpy = "^1.24.2"
nvidia-cublas-cu11 = "^11.11.3.6"
nvidia-cuda-nvrtc-cu11 = "^11.8.89"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cudnn-cu11 = "^8.9.0.131"
packaging = "^23.1"
pipreqs = "^0.4.13"
psutil = "^5.9.4"
pycryptodome = "^3.17"
pyrsistent = "^0.19.3"
python-socks = "^2.2.0"
pyyaml = "^6.0"
regex = "^2023.3.23"
requests = "^2.28.2"
tokenizers = "^0.13.3"
tqdm = "^4.65.0"
transformers = "^4.28.1"
typing-extensions = "^4.5.0"
unpaddedbase64 = "^2.1.0"
urllib3 = "^1.26.15"
websockets = "^11.0.1"
yarg = "^0.1.9"
yarl = "^1.8.2"
torch = "^1.12.1"
matrix-nio = {version = "0.10.0", extras = ["e2e"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llamatrix = "llamatrix.__main__:main"
