[tool.poetry]
name = "llamatrix"
version = "0.1.0"
description = "A LLaMA chatbox for Matrix"
authors = ["spv420 <spv420@github.com>", "Lee Braiden <leebraid@gmail.com>"]
license = ""
readme = "README.md"
packages = [
	{include = "llamatrix", from="src"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
matrix-client = "^0.4.0"
requests = "^2.28.2"
websockets = "^11.0.1"
matrix-nio = {version = "0.10.0", extras = ["e2e"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llamatrix = "llamatrix.__main__:main"
